<?xml version="1.0"?>
<package>
  <name>aubo_gazebo</name>
  <version>0.3.7</version>
  <description>
      Gazebo wrapper for the Aubo robot.
  </description>

  
  <author email="liuxin@our-robotics.com">Liuxin</author>
  <maintainer email="liuxin@our-robotics.com">Liuxin</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/aubo_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>aubo_description</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  

  <export>
  </export>
</package>
