<?xml version="1.0"?>
<package>
  <name>aubo_robot</name>
  <version>0.3.11</version>
  <description>
	Description,drivers, moveit and utilities for AUBO Robot Arms.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="liuxin@our-robotics.com">liuxin</author>
  <maintainer email="liuxin@our-robotics.com">liuxin</maintainer>  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/our_robot</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>aubo_panel</run_depend>
  <run_depend>aubo_i5_moveit_config</run_depend>
  <run_depend>aubo_description</run_depend>
  <run_depend>aubo_msgs</run_depend>
  <run_depend>aubo_control</run_depend>
  <run_depend>aubo_driver</run_depend>
  <run_depend>aubo_new_driver</run_depend>
  <run_depend>aubo_gazebo</run_depend>
  <run_depend>aubo_kinematics</run_depend>
  <run_depend>aubo_trajectory</run_depend>
  <run_depend>aubo_trajectory_filters</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <metapackage/>
  </export>
</package>
